--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "query-builder-mysql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
