--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "query-builder-mysql",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "",
   "main": "dist/index.js",
   "homepage": "https://github.com/rpsoftech/query-builder.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc --project tsconfig.build.json",
+    "pack": "node pack",
+    "prepare":"run-s build pack"
   },
-  "dependencies": {
-    "mariadb": "^2.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.0.5",
+    "@zeit/ncc": "^0.22.3",
+    "mariadb": "git+https://github.com/rpsoftech/mariadb-connector-nodejs.git",
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3"
   },
-  "author": "keyurshah3939@gmail.com",
+  "author": "rpsoftechindia@gmail.com",
   "license": "ISC"
 }
