--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "query-builder-mysql",
-  "version": "2.0.1",
-  "description": "",
+  "version": "2.5.0",
+  "description": "Typescript Based Mysql And Mariadb Query Builder",
   "main": "dist/index.js",
   "homepage": "https://github.com/rpsoftech/query-builder.git",
   "scripts": {
@@ -9,8 +9,11 @@
     "pack": "node pack",
     "prepare": "node pack"
   },
+  "peerDependencies": {
+    "mariadb": "^2.5.4"
+  },
   "dependencies": {
-    "mariadb": "^2.5.2"
+    "mariadb": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^14.0.5",
