--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "query-builder-mysql",
-  "version": "2.6.93",
+  "version": "2.7.0",
   "description": "Typescript Based Mysql And Mariadb Query Builder",
   "main": "dist/index.js",
   "homepage": "https://github.com/rpsoftech/query-builder.git",
@@ -9,8 +9,8 @@
     "pack": "node pack",
     "prepare": "node pack"
   },
-  "dependencies": {
-    "mariadb": "^2.5.4"
+  "peerDependencies": {
+    "mariadb": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "^14.0.5",
