--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "query-builder-mysql",
-  "version": "2.7.0",
+  "version": "2.7.1",
   "description": "Typescript Based Mysql And Mariadb Query Builder",
   "main": "dist/index.js",
   "homepage": "https://github.com/rpsoftech/query-builder.git",
@@ -14,10 +14,10 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.5",
-    "@zeit/ncc": "^0.22.3",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.1",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "@vercel/ncc": "^0.31.1"
   },
   "author": "rpsoftechindia@gmail.com",
   "license": "ISC"
