--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "query-builder-mysql",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Typescript Based Mysql And Mariadb Query Builder",
   "main": "dist/index.js",
   "homepage": "https://github.com/rpsoftech/query-builder.git",
   "scripts": {
+    "start": "node -r ts-node/register ./test.ts",
+    "start:watch": "nodemon",
     "build": "tsc --project tsconfig.build.json",
     "pack": "node pack",
     "prepare": "node pack"
@@ -13,10 +15,10 @@
     "mariadb": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.6.0",
-    "typescript": "^4.6.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3",
     "@vercel/ncc": "^0.33.3"
   },
   "author": "rpsoftechindia@gmail.com",
