--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "incremental":false,
     "removeComments": false,
     "emitDeclarationOnly": false
   }
