--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "query-builder-mysql",
-  "version": "3.1.64",
+  "version": "3.1.68",
+  "author": "rpsoftechindia@gmail.com",
+  "license": "ISC",
   "description": "Typescript Based Mysql And Mariadb Query Builder",
   "main": "dist/index.js",
   "homepage": "https://github.com/rpsoftech/query-builder.git",
@@ -14,7 +16,7 @@
   },
   "scripts": {
     "start": "node -r ts-node/register ./test.ts",
-    "prepublish": "npm run build:common && npm run build:es",
+    "prepublishOnly": "npm run build:common && npm run build:es",
     "start:watch": "nodemon",
     "build:es": "tsc --project tsconfig.es.build.json",
     "build:common": "tsc --project tsconfig.build.json",
@@ -30,7 +32,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "@vercel/ncc": "^0.34.0"
-  },
-  "author": "rpsoftechindia@gmail.com",
-  "license": "ISC"
+  }
 }
